Fix: Navbar, Links, Added: Particle.js, TODO: Footer, Alignment

--- a/Homepage/css/Navbar.css
+++ b/Homepage/css/Navbar.css
@@ -1,4 +1,4 @@
-@import './bootstrap.min.css';
+@import "./bootstrap.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 
 * {
@@ -17,7 +17,17 @@
   font-weight: 400;
   min-height: 104px;
 }
-
+.bottom-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  background: #ffffff;
+  font-family: "Work Sans", sans-serif;
+  color: #000000;
+  font-weight: 400;
+}
 hr.nav-divider {
   box-sizing: border-box;
   max-width: 100%;
@@ -108,7 +118,7 @@ hr.nav-divider {
   display: none;
 }
 
-.loglink{
+.loglink {
   margin-left: 25rem;
 }
 
